# nqueens_genetic

./: Cargo.toml  LICENSE  README.md
src/: main.rs
