[package]
name = "queens_genetic"
version = "0.1.0"
authors = ["Kirill Khazan <kirillkh@gmail.com>"]

[dependencies]
rand = "0.3"
lazy_static = "0.2"

#[profile.dev]
#opt-level = 3
#debug = true
#rpath = false
#lto = false
#debug-assertions = false
#codegen-units = 1

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
